Update Blood Donation Expectancy.ipynb

--- a/Blood Donation Expectancy.ipynb
+++ b/Blood Donation Expectancy.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
        "4                                           0  "
       ]
      },
-     "execution_count": 59,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
        "(748, 5)"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,7 @@
        "max        98.000000                                    1.000000  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 49,
    "metadata": {
     "scrolled": true
    },
@@ -408,7 +408,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +510,7 @@
        "Name: target, dtype: int64"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -600,13 +600,128 @@
        "4                 1                 24             77      8.699515"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "X.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Recency (months)</th>\n",
+       "      <th>Frequency (times)</th>\n",
+       "      <th>Time (months)</th>\n",
+       "      <th>log_Monetary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>146</th>\n",
+       "      <td>6</td>\n",
+       "      <td>3</td>\n",
+       "      <td>14</td>\n",
+       "      <td>6.620073</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>519</th>\n",
+       "      <td>4</td>\n",
+       "      <td>10</td>\n",
+       "      <td>28</td>\n",
+       "      <td>7.824046</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>2</td>\n",
+       "      <td>16</td>\n",
+       "      <td>64</td>\n",
+       "      <td>8.294050</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>409</th>\n",
+       "      <td>16</td>\n",
+       "      <td>1</td>\n",
+       "      <td>16</td>\n",
+       "      <td>5.521461</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>78</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>6.214608</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Recency (months)  Frequency (times)  Time (months)  log_Monetary\n",
+       "146                 6                  3             14      6.620073\n",
+       "519                 4                 10             28      7.824046\n",
+       "34                  2                 16             64      8.294050\n",
+       "409                16                  1             16      5.521461\n",
+       "78                  2                  2              4      6.214608"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_test.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "146    0\n",
+       "519    1\n",
+       "34     0\n",
+       "409    0\n",
+       "78     0\n",
+       "Name: target, dtype: int64"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_test.head()"
    ]
   },
   {
@@ -618,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -628,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +752,7 @@
        "(501, 4)"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -648,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +772,7 @@
        "(247, 4)"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -668,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +792,7 @@
        "(501,)"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -697,7 +812,7 @@
        "(247,)"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -715,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -724,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 65,
    "metadata": {
     "scrolled": true
    },
@@ -775,7 +890,7 @@
        "        use_dask=False, verbosity=2, warm_start=False)"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -788,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -813,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -826,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -837,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -856,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -878,6 +993,89 @@
    "source": [
     "from sklearn.metrics import classification_report\n",
     "print(classification_report(y_test, results))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
+       "          intercept_scaling=1, max_iter=100, multi_class='warn',\n",
+       "          n_jobs=None, penalty='l2', random_state=None, solver='lbfgs',\n",
+       "          tol=0.0001, verbose=0, warm_start=False)"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "import pickle\n",
+    "regressor = LogisticRegression(solver='lbfgs')\n",
+    "\n",
+    "#Fitting model with trainig data\n",
+    "regressor.fit(X_train, y_train)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.82      0.95      0.88       188\n",
+      "           1       0.66      0.32      0.43        59\n",
+      "\n",
+      "   micro avg       0.80      0.80      0.80       247\n",
+      "   macro avg       0.74      0.63      0.65       247\n",
+      "weighted avg       0.78      0.80      0.77       247\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import classification_report\n",
+    "print(classification_report(y_test, regressor.predict(X_test)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Saving model to disk\n",
+    "pickle.dump(regressor, open('model.pkl','wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Loading model to compare the results\n",
+    "model = pickle.load(open('model.pkl','rb'))\n",
+    "print(model.predict([[2,2,4,6.2]]))"
    ]
   },
   {
