Update Blood Donation Expectancy.ipynb

--- a/Blood Donation Expectancy.ipynb
+++ b/Blood Donation Expectancy.ipynb
@@ -997,19 +997,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\SHARIE R NATH\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "  FutureWarning)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
        "          intercept_scaling=1, max_iter=100, multi_class='warn',\n",
-       "          n_jobs=None, penalty='l2', random_state=None, solver='lbfgs',\n",
+       "          n_jobs=None, penalty='l2', random_state=None, solver='warn',\n",
        "          tol=0.0001, verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1017,7 +1025,7 @@
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
     "import pickle\n",
-    "regressor = LogisticRegression(solver='lbfgs')\n",
+    "regressor = LogisticRegression()\n",
     "\n",
     "#Fitting model with trainig data\n",
     "regressor.fit(X_train, y_train)\n"
@@ -1025,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -1034,12 +1042,12 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.82      0.95      0.88       188\n",
-      "           1       0.66      0.32      0.43        59\n",
+      "           0       0.78      0.98      0.87       188\n",
+      "           1       0.64      0.12      0.20        59\n",
       "\n",
-      "   micro avg       0.80      0.80      0.80       247\n",
-      "   macro avg       0.74      0.63      0.65       247\n",
-      "weighted avg       0.78      0.80      0.77       247\n",
+      "   micro avg       0.77      0.77      0.77       247\n",
+      "   macro avg       0.71      0.55      0.53       247\n",
+      "weighted avg       0.75      0.77      0.71       247\n",
       "\n"
      ]
     }
@@ -1051,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1061,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
